fix: add findAll in IntegrationServiceCatalog.EMPTY